--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Página de Tributo: Black Flag</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <div class="container">
         <!-- Cabeçalho -->
         <div class="header">
             <h1 class="main-title">Black Flag</h1>
-            <p class="main-paragraph">Uma banda de Rock formada na Califórnia</p>
+            <p class="main-paragraphy">Uma banda de Rock formada na Califórnia</p>
         </div>
         <!-- Imagem de destaque -->
         <div class="featured-image">
@@ -22,10 +23,10 @@
         </div>
         <!-- Biografia -->
         <div class="biography-container">
-            <h2>Sobre os anos iniciais da banda.</h2>
+            <h2>Um pouco sobre a banda</h2>
             <p>
-                Inicialmente chamada de <span>Panic</span>, o Black Flag foi uma banda de punk/hardcore formada em Hermosa Beach, 
-                Califórnia em 1976 pelo guitarrista <span>Greg Ginn.</span>
+                Inicialmente chamada de <span class="bold">Panic</span>, o Black Flag foi uma banda de punk/hardcore formada em Hermosa Beach, 
+                Califórnia em 1976 pelo guitarrista <span class="bold">Greg Ginn.</span>
             </p>
             <p>
                 A banda formou um som que misturava a simplicidade característica dos Ramones, mas com solos microtonais e 
@@ -50,6 +51,7 @@
 
         <!-- Curiosidades -->
         <div class="curiosities-container">
+            <h2>Algumas curiosidades</h2>
             <ul>
                 <li>O irmão de Ginn, Pettibon desenhou o logo da banda</li>
                 <li>O ícone Henry Rollins revelou que trocava correspondência com o assassino em série Charles Manson.</li>
