--- a/index.html
+++ b/index.html
@@ -68,6 +68,10 @@
             </blockquote>
             <p>Black Flag - Rise Above</p>
         </div>
+        <div>
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4kFfFe38CRVnTsakUTL4E4?utm_source=generator" width="100%" height="352" 
+            frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        </div>
         <!-- Segunda imagem -->
         <div class="img-bold">
             <figure>
@@ -77,7 +81,7 @@
         </div>
         <div class="more-info-container">
             <h2>Mais informações:</h2>
-            <p>Você pode conhecer mais sobre a banda <a href="#">clicando aqui</a></p>
+            <p>Você pode conhecer mais sobre a banda <a href="https://en.wikipedia.org/wiki/Black_Flag_(band)">clicando aqui</a></p>
         </div>
     </div>
 </body>
