--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
             </blockquote>
             <p>Black Flag - Rise Above</p>
         </div>
-        <div>
-            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4kFfFe38CRVnTsakUTL4E4?utm_source=generator" width="100%" height="352" 
-            frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+        <div class="music-player-container">
+            <iframe style="border-radius:12px" src="https://open.spotify.com/embed/track/4kFfFe38CRVnTsakUTL4E4?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" 
+            allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
         </div>
         <!-- Segunda imagem -->
         <div class="img-bold">
