--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <!-- Segunda imagem -->
         <div class="img-bold">
             <figure>
-                <img src="img/black-flag02.jpeg" />
+                <img src="img/black-flag02.jpeg" width="600px" height="500px"/>
                 <figcaption>Integrantes da banda</figcaption>
             </figure>
         </div>
